<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_edit_and_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/edit" />

        <EditText
            android:id="@+id/edit_contact_name"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_edit_and_save"
            android:layout_centerHorizontal="true"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_big" />

        <EditText
            android:id="@+id/edit_contact_lastname"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_contact_name"
            android:layout_centerHorizontal="true"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_big" />

        <EditText
            android:id="@+id/edit_contact_phone"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_contact_lastname"
            android:layout_centerHorizontal="true"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="@dimen/text_big" />

        <EditText
            android:id="@+id/edit_contact_address"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_contact_phone"
            android:layout_centerHorizontal="true"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_big" />

        <EditText
            android:id="@+id/edit_contact_email"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_contact_address"
            android:layout_centerHorizontal="true"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_big" />

        <LinearLayout
            android:id="@+id/date_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_contact_email"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_date_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/birth_date" />

            <Button
                android:id="@+id/btn_change_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_date" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>

